<resources>
    <string name="app_name">Space Invaders</string>
    <string name="startGame">Start game</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <string name="hello">Hello, </string>
    <string name="changeName">Change name</string>
    <string name="writeName">Enter your name</string>
    <string name="ok">OK</string>
    <string name="store">Store</string>
    <string name="ranking">Ranking</string>

    <string name="gameOption">game</string>
    <string name="storeOption">store</string>
    <string name="rankOption">rank</string>
    <string name="settingsOption">settings</string>
    <string name="levels">Levels</string>
    <string name="logo">logo</string>
    <string name="score_board">Score board</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="change_control">Change control</string>
    <string name="music">Music</string>
    <string name="off">OFF</string>
    <string name="off_two">Off</string>
    <string name="on">On</string>
    <string name="save">Save</string>
    <string name="x0">x0</string>
    <string name="buy">Buy</string>
    <string name="text_first_level">The space base was attacked by intergalactic pirates. Warships are heroically trying to repel the attack.</string>
    <string name="_1">1</string>
    <string name="text_second_level">Despite the successful defense of the base, warships remain on the alert and await a new attack.</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="text_third_level">The enemy still has no intention of retreating. With each wave, enemy ships become more powerful and more dangerous.</string>
    <string name="_4">4</string>
    <string name="text_fourth_level">The brave defenders of the base believe that the enemy will soon be defeated. But this faith can be undermined at any moment, because the Admiralty ships are on the way.</string>
    <string name="text_fifth_level">The command of the enemy fleet is losing patience. The admiral decides to go on the attack on his own. The most important ship is ahead.</string>
    <string name="_5">5</string>
    <string name="x">x</string>

    <string name="playerName">playerName</string>

</resources>